Fix small jump in Filters box and reveal of buttons.

--- a/media/css/plan.css
+++ b/media/css/plan.css
@@ -118,11 +118,15 @@ div.toolbar-list.tb-off a:active {
 }
 /* Filter buttons */
 #table-filters {
+    -webkit-transition:height 0.75s,background-color 0.75s, -webkit-transform 0.75s;
+    transition:height 0.75s, background-color 0.75s, transform 0.75s;
     float: right;
     margin-top: -35px;
+    margin-bottom: 5px;
     height: 25px;
     width: 235px;
     overflow: hidden;
+    border: thin solid white;
 }
 #table-filters:hover {
     background-color: #f5f5f5;
@@ -160,13 +164,14 @@ div.toolbar-list.tb-off a:active {
     display: none;
 }
 
-#table-filters.open {
+#table-filters.open{
+    -webkit-transition:height 0.75s,background-color 0.75s, -webkit-transform 0.75s;
+    transition:height 0.75s, background-color 0.75s, transform 0.75s;
     height: 100px;
     border: thin solid gainsboro;
 }
 
-#table-filters.open #tf-presets1,
-#table-filters.open #tf-presets2 {
+#table-filters.open #tf-presets1, #table-filters.open #tf-presets2 {
     display: block;
 }
 
